--- a/fquoter.cabal
+++ b/fquoter.cabal
@@ -35,6 +35,7 @@ library
     hs-source-dirs:     src
     exposed-modules:    FQuoter.Quote
                        ,FQuoter.Serialize
+                       ,FQuoter.Parser
     build-depends:      base >=4.6 && <4.7, containers >=0.5 && <0.6
                        ,parsec
                        ,HDBC
