--- a/fquoter.cabal
+++ b/fquoter.cabal
@@ -35,7 +35,7 @@ executable fquoter
 library
     hs-source-dirs:     src
     exposed-modules:    FQuoter.Quote
-                       ,FQuoter.Serialize
+                       ,FQuoter.Serialize.Serialize
     build-depends:      base >=4.6 && <4.7, containers >=0.5 && <0.6
                        ,parsec
                        ,HDBC
