--- a/fquoter.cabal
+++ b/fquoter.cabal
@@ -49,6 +49,7 @@ test-suite Tests
     type:               exitcode-stdio-1.0
     main-is:            Spec.hs
     build-depends:      base >=4.6 && <4.7
+                       ,containers >= 0.5 && <0.6
                        ,hspec
                        ,fquoter
                        ,HDBC
