--- a/fquoter.cabal
+++ b/fquoter.cabal
@@ -36,7 +36,8 @@ library
     hs-source-dirs:     src
     exposed-modules:    FQuoter.Quote
                        ,FQuoter.Serialize.Serialize
-                       ,FQuoter.Parser
+                       ,FQuoter.Parser.Parser
+                       ,FQuoter.Parser.ParserTypes
     build-depends:      base >=4.6 && <4.7, containers >=0.5 && <0.6
                        ,parsec
                        ,HDBC
