--- a/fquoter.cabal
+++ b/fquoter.cabal
@@ -42,6 +42,7 @@ library
                        ,FQuoter.Parser.Parser
                        ,FQuoter.Parser.ParserTypes
                        ,FQuoter.Serialize.Queries
+                       ,FQuoter.Serialize.Grouping
     build-depends:      base >=4.6 && <4.7, containers >=0.5 && <0.6
                        ,parsec
                        ,mtl >= 2.2.1
