--- a/fquoter.cabal
+++ b/fquoter.cabal
@@ -46,6 +46,7 @@ library
                        ,FQuoter.Parser.ParsingErrors
                        ,FQuoter.Serialize.Queries
                        ,FQuoter.Serialize.Grouping
+                       ,FQuoter.Templating.Display
     build-depends:      base
                        ,containers >=0.5 && <0.6
                        ,directory
