--- a/fquoter.cabal
+++ b/fquoter.cabal
@@ -46,7 +46,9 @@ library
                        ,FQuoter.Parser.ParsingErrors
                        ,FQuoter.Serialize.Queries
                        ,FQuoter.Serialize.Grouping
+                       ,FQuoter.Templating.TemplateTypes
                        ,FQuoter.Templating.Display
+                       ,FQuoter.Templating.TemplateParser
     build-depends:      base
                        ,containers >=0.5 && <0.6
                        ,directory
