--- a/fquoter.cabal
+++ b/fquoter.cabal
@@ -31,6 +31,7 @@ executable fquoter
                        ,directory
                        ,split
                        ,free
+                       ,haskeline
                        ,xdg-basedir
   hs-source-dirs:       src
   default-language:     Haskell2010
