--- a/fquoter.cabal
+++ b/fquoter.cabal
@@ -17,28 +17,11 @@ cabal-version:       >=1.10
 
 
 
-executable fquoter
-  main-is:              Main.hs
-  -- other-modules:       
-  -- other-extensions:    
-  build-depends:        base 
-                       ,containers >=0.5 && <0.6
-                       ,parsec
-                       ,parsec-numbers
-                       ,mtl >= 2.2.1
-                       ,HDBC
-                       ,HDBC-sqlite3
-                       ,directory
-                       ,split
-                       ,free
-                       ,haskeline
-                       ,xdg-basedir
-  hs-source-dirs:       src
-  default-language:     Haskell2010
 
 -- Library - for testing purposes
 library
-    hs-source-dirs:     src
+    ghc-options:        -W -Werror
+    hs-source-dirs:     lib
     exposed-modules:    FQuoter.Quote
                        ,FQuoter.Serialize.Serialize
                        ,FQuoter.Serialize.SerializedTypes
@@ -63,6 +46,27 @@ library
                        ,split
                        ,free
                        ,xdg-basedir
+                       ,convertible
+
+executable fquoter
+  main-is:              FQuoter/Main.hs
+  hs-source-dirs:       src
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:        base 
+                        ,containers >=0.5 && <0.6
+                        ,parsec
+                        ,parsec-numbers
+                        ,mtl >= 2.2.1
+                        ,HDBC
+                        ,HDBC-sqlite3
+                        ,directory
+                        ,split
+                        ,free
+                        ,haskeline
+                        ,xdg-basedir
+                        ,fquoter
+  default-language:     Haskell2010
 -- Test suite
 test-suite Tests
     hs-source-dirs:     testsuite
