Put actions in a separate module.

--- a/fquoter.cabal
+++ b/fquoter.cabal
@@ -32,6 +32,7 @@ library
                        ,FQuoter.Serialize.Queries
                        ,FQuoter.Serialize.Grouping
                        ,FQuoter.Config.Config
+                       ,FQuoter.Actions
                        ,FQuoter.Templating.TemplateTypes
                        ,FQuoter.Templating.Display
                        ,FQuoter.Templating.TemplateParser
